bug/jenkins 36102 - tabs clipped safari (#67)
* [JENKINS-36102] remove bottom margins that were clipping tabs on Run Details

* [JENKINS-36102] add a rule to avoid clipping of tabs on Run Details in Safari 9+

* [JENKINS-36102] comments

--- a/less/theme.less
+++ b/less/theme.less
@@ -687,13 +687,6 @@ code.hash {
     transform: translateZ(0);
 }
 
-// Applies this style to safari 9.0+
-@supports (overflow:-webkit-marquee) and (justify-content:inherit) {
-    .page-tabs a {
-        margin-bottom: 0px;
-    }
-}
-
 .page-tabs a:before {
     // For transforming underline
     content: "";
@@ -836,7 +829,13 @@ footer {
 
     a {
         letter-spacing: 1.1px;
-        margin-bottom: -4px;
+    }
+}
+
+// force the parent container of the tabs taller to avoid clipping in Safari 9+
+@supports (overflow:-webkit-marquee) and (justify-content:inherit) {
+    .dialog .header .page-tabs {
+        margin-bottom: 22px;
     }
 }
 
